# autoscript_mock_microscope

./: README.md  pyproject.toml  setup.py  shell.nix
.github/workflows/: pytest.yml
autoscript_mock_microscope/: __init__.py  beams.py  imaging.py  metadata.py  mock_microscope.py  patterning.py  specimen.py  values.py
src/autoscript_mock_microscope/: beams.py  gas.py  imaging.py  metadata.py  mock_microscope.py  patterning.py  specimen.py  values.py
tests/: conftest.py  test_grab_frame.py
